# amuse_util

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENCE.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
amuse_util/: __init__.py  conftest.py
amuse_util/data/: __init__.py
amuse_util/datamodel/: __init__.py  _container.py  _system.py
amuse_util/ic/: __init__.py  _initialize_system.py  brokenimf.py  invcdf.py  star_cluster.py  utils.py
amuse_util/simulation/: symlink_latest.py
amuse_util/simulation/snapshot/: __init__.py
amuse_util/units/: __init__.py  _add_to_astropy_units.py  amuse_units.py
amuse_util/utils/: __init__.py
amuse_util/utils/_logging/: _LogFile.py  _LogPrint.py
amuse_utils/: __init__.py
amuse_utils/datamodel/: __init__.py  _container.py  _system.py
amuse_utils/example_subpkg/: setup_package.py
amuse_utils/ic/: __init__.py  _initialize_system.py  brokenimf.py  invcdf.py  star_cluster.py  util.py
amuse_utils/simulation/: symlink_latest.py
amuse_utils/tests/: test_example.py
amuse_utils/units/: _add_to_astropy_units.py  amuse_units.py  astropy_units.py  convert.py
amuse_utils/utils/: __init__.py
amuse_utils/utils/_logging/: _LogFile.py
docs/: .gitignore  conf.py  credits.rst  index.rst  requirements.txt
docs/amuse_util/: index.rst
docs/amuse_util/data/: index.rst
docs/amuse_util/datamodel/: index.rst
docs/amuse_util/ic/: brokenimf.rst  index.rst  initialize_system.rst  invcdf.rst  star_cluster.rst  utils.rst
docs/amuse_util/simulation/: index.rst
docs/amuse_util/units/: amuse_units.rst  astropy_units.rst  convert.rst  index.rst
docs/amuse_util/utils/: index.rst
docs/amuse_utils/: index.rst
docs/amuse_utils/datamodel/: index.rst
docs/documentation/: benefits.rst  testing.rst
docs/whatsnew/: 0.1.rst  planned.rst
licenses/: LICENSE.rst
