[metadata]
name = amuse_utils
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/nstarman/amuse_utils
description = AMUSE utility functions with Astropy compatibility
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = amuse_utils

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy
    astropy
    amuse-framework
    typing
    wrapt

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
amuse_utils = data/*

[tool:pytest]
testpaths = "amuse_utils" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    amuse_utils/_astropy_init*
    amuse_utils/conftest.py
    amuse_utils/*setup_package*
    amuse_utils/tests/*
    amuse_utils/*/tests/*
    amuse_utils/extern/*
    amuse_utils/version*
    */amuse_utils/_astropy_init*
    */amuse_utils/conftest.py
    */amuse_utils/*setup_package*
    */amuse_utils/tests/*
    */amuse_utils/*/tests/*
    */amuse_utils/extern/*
    */amuse_utils/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
