[metadata]
name = amuse_util
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/nstarman/amuse_util
description = AMUSE utility functions with Astropy compatibility
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = amuse_util

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy
    astropy
    amuse-framework
    typing
    wrapt
    utilipy

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    nbsphinx
    jupyter_client

[options.package_data]
amuse_util = data/*

[tool:pytest]
testpaths = "amuse_util" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
doctest_norecursedirs=*/amuse_util/extern/*
addopts = --doctest-rst

[coverage:run]
omit =
    amuse_util/_astropy_init*
    amuse_util/conftest.py
    amuse_util/*setup_package*
    amuse_util/tests/*
    amuse_util/*/tests/*
    amuse_util/extern/*
    amuse_util/version*
    */amuse_util/_astropy_init*
    */amuse_util/conftest.py
    */amuse_util/*setup_package*
    */amuse_util/tests/*
    */amuse_util/*/tests/*
    */amuse_util/extern/*
    */amuse_util/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
